tests/ui/compare-method/traits-misc-mismatch-1.stderr
error[E0276]: impl has stricter requirements than trait
  --> $DIR/traits-misc-mismatch-1.rs:27:26
   |
LL |     fn test_error1_fn<T: Eq>(&self);
   |     -------------------------------- definition of `test_error1_fn` from trait
...
LL |     fn test_error1_fn<T: Ord>(&self) {}
   |                          ^^^ impl has extra requirement `T: Ord`

error[E0276]: impl has stricter requirements than trait
  --> $DIR/traits-misc-mismatch-1.rs:31:31
   |
LL |     fn test_error2_fn<T: Eq + Ord>(&self);
   |     -------------------------------------- definition of `test_error2_fn` from trait
...
LL |     fn test_error2_fn<T: Eq + B>(&self) {}
   |                               ^ impl has extra requirement `T: B`

error[E0276]: impl has stricter requirements than trait
  --> $DIR/traits-misc-mismatch-1.rs:35:26
   |
LL |     fn test_error3_fn<T: Eq + Ord>(&self);
   |     -------------------------------------- definition of `test_error3_fn` from trait
...
LL |     fn test_error3_fn<T: B + Eq>(&self) {}
   |                          ^ impl has extra requirement `T: B`

error[E0276]: impl has stricter requirements than trait
  --> $DIR/traits-misc-mismatch-1.rs:45:26
   |
LL |     fn test_error5_fn<T: A>(&self);
   |     ------------------------------- definition of `test_error5_fn` from trait
...
LL |     fn test_error5_fn<T: B>(&self) {}
   |                          ^ impl has extra requirement `T: B`

error[E0276]: impl has stricter requirements than trait
  --> $DIR/traits-misc-mismatch-1.rs:51:30
   |
LL |     fn test_error7_fn<T: A>(&self);
   |     ------------------------------- definition of `test_error7_fn` from trait
...
LL |     fn test_error7_fn<T: A + Eq>(&self) {}
   |                              ^^ impl has extra requirement `T: Eq`

error[E0276]: impl has stricter requirements than trait
  --> $DIR/traits-misc-mismatch-1.rs:54:26
   |
LL |     fn test_error8_fn<T: B>(&self);
   |     ------------------------------- definition of `test_error8_fn` from trait
...
LL |     fn test_error8_fn<T: C>(&self) {}
   |                          ^ impl has extra requirement `T: C`

error[E0276]: impl has stricter requirements than trait
  --> $DIR/traits-misc-mismatch-1.rs:67:18
   |
LL |     fn method<G:Getter<isize>>(&self);
   |     ---------------------------------- definition of `method` from trait
...
LL |     fn method<G: Getter<usize>>(&self) {}
   |                  ^^^^^^^^^^^^^ impl has extra requirement `G: Getter<usize>`

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0276`.
